# apptimer

./: .gitignore  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-916d4ba8eebc295f1302cb85077c902b0ac2fc4c58037085ad2414271fd892b5.json  query-f02ec2b92dbab0ee7550daf77a17bf9ef2a563764b1219be7ee45baecc69e7ed.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20251209004223_init.sql  20260103110752_norm.sql  20260130145523_view2.sql  20260130152327_view3.sql  20260130174209_view4.sql  20260130175148_view5.sql  20260623095338_steam_games_table.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  tracker.rs
src-tauri/src/os_utils/: linux.rs  mod.rs  windows.rs
src/lib/: Listing.svelte  Listing2.svelte  Loader.svelte  OneDateEntry.svelte  OneListing.svelte  RadioButtons.svelte  SwitchButton.svelte  Timeline.svelte  TimelineTwo.svelte  UnboundRenderer.svelte  base.svelte  largerListing.svelte  listing.svelte
src/lib/components/: Dropdown.svelte  GenericRadioButtons.svelte  GlobalContextMenu.svelte  GlobalModal.svelte  Listing.svelte  Listing2.svelte  OneListing.svelte  RadioButtons.svelte  StackedBar.svelte
src/lib/icons/: ArrowDown.svelte  ArrowUp.svelte  index.ts
src/lib/interfaces/: index.ts  steam_app.ts
src/lib/services/: chartUtils.ts  dataProvider.svelte.ts  index.ts  interactionState.svelte.ts  ipc.ts  nameResolver.svelte.ts  selectedDate.svelte.ts  (+2 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
templates/: config.yaml
(+16 files in other folders)
