[package]
name = "apptimer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apptimer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies.windows]
version = "^0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "^2.0.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "^1.19", features = ["full"] } # Tauri includes this, but good to be explicit
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
sysinfo = "^0" # Needed only for windows, but might be useful even on linux
arc-swap = "1.7.0"
sqlx-cli = "0.8.6"
tauri-plugin-fs = "2"
